# data-platform-toolkit

./: AWS_SETUP.md  LICENSE  MANIFEST.in  README.md  example.env  pyproject.toml  release-notes.md
.github/workflows/: deploy.yaml  tagging.yaml
data_platform_toolkit/: __init__.py
data_platform_toolkit/connections/: redshift.py
